src/styles/pages/posts.module.scss
.container {
	display: grid;
	grid-template-rows: 10% 90%;
	grid-template-areas: 'top top' 'aside posts';
	grid-template-columns: 20% 80%;
	gap: 4rem;
	justify-content: flex-start;

	max-width: 1120px;
	margin: 0 auto;
	padding: 0 3.2rem;

	@media screen and (max-width: 500px) {
		grid-template-rows: 3% 97%;
		grid-template-columns: max-content;
		gap: 1rem;
		padding: 0 1.2rem;
		margin: 3rem auto;
	}
}

.top {
	//margin: 7rem auto 0;

	width: 100%;
	border: 1px solid red;
}
.aside {
	grid-area: aside;
	border: 1px solid green;

	@media screen and (max-width: 500px) {
		max-width: 121px;
	}
}

.filters {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: flex-start;

	h3:first-child {
		margin-bottom: 0.5rem;
	}
}

.orderBy {
	margin-top: 2rem;
}

.orderBy__radio {
	margin: 1rem 0;

	label {
		margin-left: 0.5rem;
	}
}

.checkbox-item {
	margin: 0.5rem 0;

	input {
		margin-right: 0.5rem;
	}

	overflow-wrap: break-word;
	-ms-word-wrap: break-word;
	word-wrap: break-word;
	max-width: fit-content;

	@media screen and (max-width: 500px) {
		max-width: 121px;
	}
}
.posts {
	grid-area: posts;
	max-width: 720px;
	border: 1px solid blue;
	padding-bottom: 3rem;
	//margin: 8rem auto 0;
}

.post-link {
	display: block;

	& + a {
		/*for each post that is preceded by another post*/
		margin-top: 3.2rem;
		padding-top: 3.2rem;
		border-top: 1px solid var(--color-gray-700);
	}
}

.post-link__time {
	font-size: 1.6rem;
	display: flex;
	align-items: center;
	color: var(--color-gray-300);
}

.post-link__title {
	display: block;
	font-size: 2rem;
	margin-top: 1.6rem;
	line-height: 3.2rem;
	transition: color 0.5s;

	&:hover {
		color: var(--color-yellow-500);
	}
}

.post-link__brief-description {
	color: var(--color-gray-300);
	margin-top: 0.8rem;
	line-height: 2.6rem;
}

